work on loading crystals

--- a/index.html
+++ b/index.html
@@ -35,15 +35,22 @@
 		<div class="col-md-6">
 
 
-				<div class=" target text-center bg-info">
-					<h1>target number</h1>
+				<div class="target text-center bg-info" style="font-size: 30px;">
+					<!-- <h1>target number</h1>
+					<br> -->
 				</div>
 
 			
 
-				<div>
-					<p>Crystal 1 Crystal 2 Crystal 3 Crystal 4</p>
+				<div class ="crystals text-center mt-4 mb-4">
+					
+					<!-- <button class="btn btn-default crystal1">cry1</button>
+              		<button class="btn btn-default crystal2">cry2</button>
+              		<button class="btn btn-default crystal3">cry3</button>
+              		<button class="btn btn-default crystal4">cry4</button>
+              		 -->
 				</div>
+				
 
 				<div class="bg-info">
 					<p>Your total score is:</p>
@@ -61,6 +68,12 @@
 
 
 </body>
+
+<style>
+.crystalsize = {height:150px;
+			width: 150px;
+			}
+</style>
 
 <script src ="assets/javascript/game.js"></script>
 
