css not applying

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+
+
 </head>
 
-<body>
+<body style="background-color: lightgray;">
 
 <div>
 	<br>
@@ -35,7 +37,7 @@
 		<div class="col-md-6">
 
 
-				<div class="target text-center bg-info" style="font-size: 30px;">
+				<div class="target text-center bg-info" style="font-size: 40px;">
 					<!-- <h1>target number</h1>
 					<br> -->
 				</div>
@@ -69,11 +71,7 @@
 
 </body>
 
-<style>
-.crystalsize = {height:150px;
-			width: 150px;
-			}
-</style>
+
 
 <script src ="assets/javascript/game.js"></script>
 
