game works on first cycle, needs reset help, display is done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div>
 	<br>
-	<h1 class="text-center">Crystals Collector</h1>
+	<h1 class="text-center bg-secondary">Crystals Collector</h1>
 	<br>
 </div>
 
@@ -38,31 +38,34 @@
 
 
 				<div class="target text-center bg-info" style="font-size: 40px;">
-					<!-- <h1>target number</h1>
-					<br> -->
 				</div>
 
 			
 
-				<div class ="crystals text-center mt-4 mb-4">
-					
-					<!-- <button class="btn btn-default crystal1">cry1</button>
-              		<button class="btn btn-default crystal2">cry2</button>
-              		<button class="btn btn-default crystal3">cry3</button>
-              		<button class="btn btn-default crystal4">cry4</button>
-              		 -->
+				<div class ="crystals text-center mt-3 mb-3">
 				</div>
 				
 
-				<div class="bg-info">
-					<p>Your total score is:</p>
+				<div class="bg-secondary mb-0">
+					<p class="mb-0 pl-2">Your total score is:</p>
 				</div>
 
-				<div class="score text-center bg-info">
-					<h1>SCORE</h1>
+				<div class="text-center bg-secondary mt-0">
+					<h1 class="score">0</h1>
 				</div>
-				<div class="bg-secondary">
-					<p>Wins:     Losses:</p>
+				<div class = "container">
+					<div class ="row text-center bg-secondary">
+						<!-- <div class="bg-secondary"> -->
+							<div class="col-md-6 text-center">
+							<p class="my-0"> Wins:</p>
+							<p class="winnumber my-0">0</p>
+							</div>
+							<div class="col-md-6 text-center">
+							<p class="my-0">Losses:</p>
+							<p class="lossnumber my-0">0</p>
+							</div>
+						<!-- </div> -->
+					</div>
 				</div>
 		</div>
 </div>
