added small screen responsive

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
 <body style="background-color: lightgray;">
 
-<div>
-	<br>
-	<h1 class="text-center bg-secondary">Crystals Collector</h1>
-	<br>
+
+<div class="bg-secondary text-center mt-4 mb-4">
+	<img src="assets/images/gemicon.png" class = "icon">
+	<h1>Crystals Collector</h1>
 </div>
 
 <div class="container">
-	<div class="row"> 
+	<div class="row mb-4"> 
 		
 		<div class="col-md-6">
 			<div class="bg-light p-2">
@@ -31,13 +31,14 @@
 				<p>There are four crystals.  By clicking on a crystal, you will add a specific amount of points to your total score.</p>
 				<p>The value of each crystal is hidden from you until you click on it.</p>
 				<p>Each time the game starts, the target number and the value of each crystal will be updated.</p>
+				<br>
 			</div>
 		</div>
 
 		<div class="col-md-6">
 
 
-				<div class="target text-center bg-info" style="font-size: 40px;">
+				<div class="target text-center bg-info" style="font-size: 41px;">
 				</div>
 
 			
@@ -50,17 +51,17 @@
 					<p class="mb-0 pl-2">Your total score is:</p>
 				</div>
 
-				<div class="text-center bg-secondary mt-0">
+				<div class="text-center bg-secondary mt-0 mb-3">
 					<h1 class="score">0</h1>
 				</div>
 				<div class = "container">
 					<div class ="row text-center bg-secondary">
 						<!-- <div class="bg-secondary"> -->
-							<div class="col-md-6 text-center">
+							<div class="col-md-6 text-center col-sm-6">
 							<p class="my-0"> Wins:</p>
 							<p class="winnumber my-0">0</p>
 							</div>
-							<div class="col-md-6 text-center">
+							<div class="col-md-6 text-center col-sm-6">
 							<p class="my-0">Losses:</p>
 							<p class="lossnumber my-0">0</p>
 							</div>
