--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
 
 <div class="bg-secondary text-center mt-4 mb-4">
 	<img src="assets/images/gemicon.png" class = "icon">
-	<h1>Crystals Collector</h1>
+	<h1 id="name">Crystals Collector</h1>
 </div>
 
 <div class="container">
 	<div class="row mb-4"> 
 		
-		<div class="col-md-6">
-			<div class="bg-light p-2">
-				<p>You will be given a random number at the start of the game.</p>
-				<p>There are four crystals.  By clicking on a crystal, you will add a specific amount of points to your total score.</p>
-				<p>The value of each crystal is hidden from you until you click on it.</p>
-				<p>Each time the game starts, the target number and the value of each crystal will be updated.</p>
-				<br>
+		<div class="col-md-6 boxsize">
+			<div class="bg-light px-2 py-4 boxsize mb-3">
+				<p id="para">You will be given a random number at the start of the game.</p>
+				<p id="para">There are four crystals.  By clicking on a crystal, you will add a specific amount of points to your total score.</p>
+				<p id="para">The value of each crystal is hidden from you until you click on it.</p>
+				<p id="para">Each time the game starts, the target number and the value of each crystal will be updated.</p>
+				<!-- <br> -->
+				
 			</div>
 		</div>
 
-		<div class="col-md-6">
+		<div class="col-md-6 boxsize">
 
 
 				<div class="target text-center bg-info" style="font-size: 41px;">
