--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body style="background-color: lightgray;">
+<body>
 
 
 <div class="bg-secondary text-center mt-4 mb-4">
@@ -39,7 +39,7 @@
 		<div class="col-md-6 boxsize">
 
 
-				<div class="target text-center bg-info" style="font-size: 41px;">
+				<div class="target text-center" style="font-size: 41px; background-color: #fdbf04a1">
 				</div>
 
 			
