--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="row mb-4"> 
 		
 		<div class="col-md-6 boxsize">
-			<div class="bg-light px-2 py-4 boxsize mb-3">
+			<div class="bg-light px-2 py-4 boxsize mb-3" style="border-style: solid; border-color: lightgray">
 				<p id="para">You will be given a random number at the start of the game.</p>
 				<p id="para">There are four crystals.  By clicking on a crystal, you will add a specific amount of points to your total score.</p>
 				<p id="para">The value of each crystal is hidden from you until you click on it.</p>
