--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 
 
-<div class="bg-secondary text-center mt-4 mb-4">
+<div class="bg-secondary text-center mt-4 mb-5">
 	<img src="assets/images/gemicon.png" class = "icon">
 	<h1 id="name">Crystals Collector</h1>
 </div>
 
-<div class="container">
+<div class="container mb-4">
 	<div class="row mb-4"> 
 		
 		<div class="col-md-6 boxsize">
@@ -70,6 +70,12 @@
 					</div>
 				</div>
 		</div>
+	</div>
+
+</div>
+
+<div class="footer">
+		<p>&copy; Copyright 2107  Susan Marek</p>
 </div>
 
 
