--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="assets/css/style.css">
-
-
+	<link rel="shortcut icon" href="favicon.ico" />
 
 </head>
 
@@ -27,12 +26,13 @@
 		<div class="row mb-4"> 
 
 			<div class="col-md-6 boxsize mb-3">
-				<div class="bg-light px-2 py-4 boxsize mb-3" style="border-style: solid; border-color: lightgray; border-width: 1px">
-					<p id="para">You will be given a random target number at the start of the game.</p>
-					<p id="para">By clicking on a crystal, you will add a specific amount of points to your total score.</p>
-					<p id="para">The value of each crystal is hidden from you until you click on it.</p>
-					<p id="para">Each time the game starts, the target number and the value of each crystal will be updated.</p>
-
+				<div class="bg-light px-5 py-4 px-2 shadow boxsize mb-3" style="border-style: solid; border-color: lightgray; border-width: 1px">
+					<ul style="list-style-type:disc">
+						<li id="para">You will be given a random target number at the start of the game.</li>
+						<li id="para">By clicking on a crystal, you will add a specific amount of points to your total score.</li>
+						<li id="para">The value of each crystal is hidden from you until you click on it.</li>
+						<li id="para">Each time the game starts, the target number and the value of each crystal will be updated.</li>
+					</ul>
 				</div>
 			</div>
 
