--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-	<div class="bg-secondary text-center mt-4 mb-5">
+	<div class="bg-secondary text-center mt-4 mb-5 shadow">
 		<img src="assets/images/gemicon.png" class = "icon">
 		<h1 id="name">Crystals Collector</h1>
 	</div>
