--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 	<footer class="footer mt-3">
 		<div class="container footercontainer text-center">
-			<span class="footertext">&copy; Copyright Susan Marek</span>
+			<span class="footertext">&copy; 2018 Susan Marek</span>
 		</div>
 	</footer>
 
